--- a/docs/style.css
+++ b/docs/style.css
@@ -1,24 +1,28 @@
 /* Twilight by David Hart (https://github.com/hartbit) */
 
 @import url('https://fonts.googleapis.com/css?family=La+Belle+Aurore&display=swap');
+
+/* Woodland by Jay Cornwall (https://jcornwall.com) */
+
 :root {
-  --base00: #1e1e1e;
-  --base01: #323537;
-  --base02: #464b50;
-  --base03: #5f5a60;
-  --base04: #838184;
-  --base05: #a7a7a7;
-  --base06: #c3c3c3;
-  --base07: #ffffff;
-  --base08: #cf6a4c;
-  --base09: #cda869;
-  --base0A: #f9ee98;
-  --base0B: #8f9d6a;
-  --base0C: #afc4db;
-  --base0D: #7587a6;
-  --base0E: #9b859d;
-  --base0F: #9b703f;
+  --base00: #231e18;
+  --base01: #302b25;
+  --base02: #48413a;
+  --base03: #9d8b70;
+  --base04: #b4a490;
+  --base05: #cabcb1;
+  --base06: #d7c8bc;
+  --base07: #e4d4c8;
+  --base08: #d35c5c;
+  --base09: #ca7f32;
+  --base0A: #e0ac16;
+  --base0B: #b7ba53;
+  --base0C: #6eb958;
+  --base0D: #88a4d3;
+  --base0E: #bb90e2;
+  --base0F: #b49368;
 }
+
 
 h1 {
   font-size: 50;
